--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
+    "tinymce": "^4.5.6",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
